@@ -93,6 +93,7 @@
  * 20020114 (2.0.31-dev) mod_dav changed how it asks its provider to fulfill
  *                       a GET request
  * 20020118 (2.0.31-dev) Input filtering split of blocking and mode
+ * 20020127 (2.0.31-dev) bump for pre_mpm hook change
  */
 
 #define MODULE_MAGIC_COOKIE 0x41503230UL /* "AP20" */
